K8s-manual/istio/virtual-svc.yaml
#todo: This is a virtual service which is connected to istio-gateway helps in routing of traffic

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app-route
  namespace: istio-system
spec:
  hosts:
    - "application.harshpanchal.in"  # Matches all traffic to this virtual service
  gateways:
    - app-gateway
  http:
  # The URL here represents the application URL if your application root is listening on / then only it works, suppose here if you place /metrics instead of / then no one can access other URL's apart from /metrics
  - match:
      - uri:
          prefix: /
    route:
    - destination:
        host: backend-svc.default.svc.cluster.local # service location
        port:
          number: 7050
